--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,7 +4,7 @@
 
     <!-- MainActivity texts -->
 
-    <string name="title_manage_expense">Manage Your Expense, Dara</string>
+    <string name="title_manage_expense">Manage Your Expense, mony</string>
     <string name="last_expense_text">My last expense was 0</string>
     <string name="btn_add_expense">Add New Expense</string>
     <string name="btn_view_detail">View Detail Expense</string>
